<resources>
    <string name="app_name">imageAppTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="developer">Developer</string>
    <string name="developer_name">Serhii Konar</string>
    <string name="version">Version</string>
    <string name="app" >The Definition app is very popular among philologists. It helps to find out the definition of the concrete word. You can store words with their definitions in a list and refer to the word at any time you need.</string>
    <string name="next" >In the next version the possibility to find words in your list will be added (search mechanism) </string>
</resources>